# vlogi

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.storybook/: main.ts
docs/: README.cn.md
frontend/: package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
frontend/messages/: es.json  zh-tw.json
frontend/project.inlang/: settings.json
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/demo/: +page.svelte
frontend/src/routes/demo/paraglide/: +page.svelte
messages/: en.json  es.json  ja.json  jp.json  ru.json  zh-cn.json  zh-tw.json
project.inlang/: project_id  settings.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: info.rs  mod.rs  store.rs
src-tauri/src/state/: app_handle.rs  app_states.rs  args.rs  mod.rs  model.rs
src-tauri/src/utils/: file_watcher.rs  message.rs  mod.rs  sql.rs  trace.rs  webview.rs
src/lib/: index.ts
src/lib/comp/: Backdrop.svelte  DynamicTabs.svelte  LeftTabs.svelte  Lightswitch.svelte  Paneltoggle.svelte  Sidebar.svelte  Statusbar.svelte  Titlebar.svelte
src/lib/comp/Settings/: Dialog.svelte  LangSel.svelte
src/lib/comp/Settings/Repo/: OpenProject.svelte  RepoDialog.svelte  RepoInfo.svelte  Repository.svelte  RepositoryList.svelte
src/lib/stores/: i18n.ts  info.svelte.ts  loading.svelte.ts  panel.svelte.ts  project.svelte.ts  repository.svelte.ts
src/lib/stores/config/ipc/: i18n.svelte.ts  light.svelte.ts  repository.svelte.ts
src/lib/stores/project/: project.svelte.ts
src/lib/utils/: appdb.ts  env.ts  evt copy.ts  evt.ts  logger.ts  softinfo.ts
src/lib/utils/appdb/: cfgdb.ts  index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  view.svelte
src/routes/demo/: +page.svelte
src/routes/demo/paraglide/: +page.svelte
src/routes/views/: open.svelte  test.svelte
