[package]
name = "webgen"
version = "0.1.0"
description = "AI-Powered Web Application Generator"
authors = ["masol.li@gmail.com"]
edition = "2021"

[[bin]]
name = "webgen"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "webgen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.4", features = ["rt-multi-thread", "sync", "macros"] }
clap = { version = "4.5.48", features = ["derive"] }
directories = "6.0.0"
config = { version = "0.15.18", features = ["async", "convert_case", "json", "json5", "toml", "yaml"] }
tauri-plugin-store = "2.4.0"
tempfile = "3.23.0"
tracing = { version = "0.1.41", features = ["release_max_level_warn"] }
tracing-subscriber = "0.3.20"
sys-locale = "0.3.2"
